# irnas-notecard-driver

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  Kconfig  README.md  east.yml  makefile  west.yml
.github/workflows/: build.yaml  codechecker.yaml  create-release.yaml  publish-release.yaml
drivers/: CMakeLists.txt  Kconfig
drivers/include/: notecard.h
drivers/notecard/: CMakeLists.txt  Kconfig  notecard.c  notecard_i2c.c  notecard_private.h  notecard_uart.c
dts/bindings/: blues,notecard-common.yaml  blues,notecard-i2c.yaml  blues,notecard-uart.yaml  irnas,notecard-common.yaml  irnas,notecard-i2c.yaml  irnas,notecard-uart.yaml
samples/interrupt/: CMakeLists.txt  README.md  notecard_over_i2c.overlay  notecard_over_uart.overlay  sample.yaml
samples/interrupt/src/: main.c
samples/notecard_over_i2c/: CMakeLists.txt  app.overlay  prj.conf
samples/notecard_over_i2c/src/: CMakeLists.txt  main.c  prj.conf
samples/notecard_over_i2c_with_interrupt/: CMakeLists.txt  app.overlay  nrf52840dk_nrf52840.overlay
samples/notecard_over_uart/: app.overlay  nrf52840dk_nrf52840.overlay  prj.conf
samples/notecard_over_uart/src/: main.c
samples/version_test/: CMakeLists.txt  README.md  notecard_over_i2c.overlay  notecard_over_uart.overlay  sample.yaml
samples/version_test/src/: main.c
